# BssApi

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: docker-image.yml
bssapi/: __init__.py
bssapi/api/router/: __init__.py  dbf.py
bssapi/api/router/parser/: __init__.py  dbf.py
bssapi/core/dbf/: __init__.py
bssapi/core/json/: __init__.py
bssapi/schemas/: Exch.py  exch.py
bssapi/schemas/http/headers/: __init__.py
tests/: S0041283.dbf  test__init__.py
