[tool.poetry]
name = "BssAPI"
version = "0.1.0"
description = "Функционал перефирийного взаимодействия корпоративной учетной системы BSS"
authors = ["Anton Rastyazhenko <rastyazhenko.anton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.61.1"}
dbfread = {git = "https://github.com/rysson/dbfread.git", rev = "master"}
orjson = "^3.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
bapi = 'bssapi:app'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

